top of this file (even if no changes are listed under it), or you will get a
"Entry without section" error. Also, to maintain proper sorting in the generated
changelogs when making a new release, docs/changelog.txt in the dfhack repo must
have the new release listed in the right place, even if no changes were made in
that repo.

Template for new versions:

## New Tools

## New Features

## Fixes

## Misc Improvements

## Removed

]]]

# Future

## New Tools

## New Features

## Fixes

## Misc Improvements

## Removed

# 53.01-r1

## New Tools
- `fix/symbol-unstick`: unstick noble symbols that cannot be re-designated.
- `resize-armor`: resize armor or clothing item to any creature size.

## New Features

## Fixes
- `autotraining`: squads once used for training then disabled now properly are treated as disabled.

## Misc Improvements

## Removed
- `fix/archery-practice`: removed from the control panel's bug fixes tab.

# 52.05-r2

## New Tools

## New Features

## Fixes
- `fix/archery-practice`: now splits instead of combining ammo items in quivers, and moves quivers to end of unit's inventory list

## Misc Improvements

## Removed

# 52.05-r1

## New Tools
- `fix/archery-practice`: combine ammo items in units' quivers to fix 'Soldier (no item)' issue
- `gui/adv-finder`: UI for tracking historical figures and artifacts in adventure mode
- `store-owned`: task owned items to be stored in the owner's room furniture

## New Features

## Fixes
- `ban-cooking`: bans honey added by creatures other than vanilla honey bee
- `uniform-unstick`: added quivers, backpacks, and flasks/waterskins to uniform analysis
- `uniform-unstick`: the ``--drop`` option now only evaluates clothing as possible items to drop
- `uniform-unstick`: the ``--free`` option no longer redundantly reports an improperly assigned item when that item is removed from a uniform
- `uniform-unstick`: the ``--drop`` and ``--free`` options now only drop items which are actually in a unit's inventory